lots of changes, more hands on now

--- a/tests/csi2_basic/Makefile
+++ b/tests/csi2_basic/Makefile
@@ -11,5 +11,6 @@ export PYTHONPATH := $(shell pwd)/../..:$(PYTHONPATH)
 
 # Default simulator
 SIM ?= icarus
+WAVES ?= 1
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
