--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cocotbext-mipi-csi2"
-version = "0.1.0"
+dynamic = ["version"]
 description = "MIPI CSI-2 simulation framework for cocotb"
 readme = "README.md"
 license = { file = "LICENSE" }
@@ -62,6 +62,9 @@ dev = [
 [tool.setuptools]
 packages = ["cocotbext", "cocotbext.csi2", "cocotbext.csi2.phy"]
 include-package-data = true
+
+[tool.setuptools.dynamic]
+version = {attr = "cocotbext.csi2.about.__version__"}
 
 [tool.setuptools.package-data]
 "*" = ["*.md", "*.rst", "*.txt"]
@@ -127,49 +130,3 @@ ignore_missing_imports = true
 [tool.mypy-pytest.*]
 ignore_missing_imports = true
 
-[tool.tox]
-legacy_tox_ini = """
-[tox:tox]
-envlist = py37, py38, py39, py310, py311, py312, py313
-skip_missing_interpreters = true
-minversion = 3.18.0
-requires = virtualenv >= 16.1
-
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
-    3.12: py312
-    3.13: py313
-
-[testenv]
-setenv =
-    COVERAGE=1
-usedevelop = True
-
-deps =
-    pytest == 8.3.4
-    pytest-xdist == 3.6.1
-    cocotb == 1.9.2
-    cocotb-bus == 0.2.1
-    cocotb-test == 0.2.6
-    numpy >= 1.16.0
-    coverage == 7.0.5
-    pytest-cov == 4.0.0
-
-commands =
-    pytest --cov=cocotbext --cov=tests --cov-branch {posargs:-n auto --verbose}
-    bash -c 'find . -type f -name "\\.coverage" | xargs coverage combine --append'
-    coverage report
-
-allowlist_externals =
-    bash
-
-[coverage:paths]
-source =
-    cocotbext/
-    /*/cocotbext
-"""
