--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "MIPI CSI-2 simulation framework for cocotb"
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
-  { name = "CSI-2 Extension Contributors", email = "contributors@cocotbext-csi2.org" }
+  { name = "David stonelyd", email = "stonelyd@yahoo.com" }
 ]
 keywords = ["mipi", "csi-2", "dphy", "cphy", "camera", "cocotb", "simulation"]
 requires-python = ">=3.6"
@@ -31,13 +31,8 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
   "Topic :: System :: Hardware"
 ]
-urls = {
-  "Bug Tracker" = "https://github.com/stonelyd/cocotbext-mipi-csi2/issues",
-  "Source Code" = "https://github.com/stonelyd/cocotbext-mipi-csi2",
-  "Documentation" = "https://cocotbext-mipi-csi2.readthedocs.io/"
-}
 dependencies = [
-  "cocotb >= 1.6.0",
+  "cocotb >= 1.9.0",
   "cocotb-bus >= 0.2.1",
   "numpy >= 1.16.0"
 ]
@@ -59,8 +54,12 @@ dev = [
   "mypy"
 ]
 
+[project.urls]
+"Bug Tracker" = "https://github.com/stonelyd/cocotbext-mipi-csi2/issues"
+"Source Code" = "https://github.com/stonelyd/cocotbext-mipi-csi2"
+"Documentation" = "https://cocotbext-mipi-csi2.readthedocs.io/"
+
 [tool.setuptools]
-packages = ["cocotbext", "cocotbext.csi2", "cocotbext.csi2.phy"]
 include-package-data = true
 
 [tool.setuptools.dynamic]
@@ -120,13 +119,4 @@ no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 show_error_codes = true
-
-[tool.mypy-cocotb.*]
 ignore_missing_imports = true
-
-[tool.mypy-numpy.*]
-ignore_missing_imports = true
-
-[tool.mypy-pytest.*]
-ignore_missing_imports = true
-
